--- a/web/templates/host_status.html
+++ b/web/templates/host_status.html
@@ -25,7 +25,7 @@ function check_now(id){
 <div class="container">
   <div class="row">
     <div class="col-lg-8">
-      <h2 class="mb-3"><i class="mdi mdi-{{ host['icon'] }} icon-2x"></i> {{ host['name'] }}</h2>
+      <h2 class="mb-3 host-title"><i class="mdi mdi-{{ host['icon'] }} icon-2x"></i> {{ host['name'] }}</h2>
       <p>{{ host['info'] }}</p>
     </div>
     <div class="col-lg-4 host-status-card">
