make sure menu options are in the right order

--- a/web/static/css/mobile.css
+++ b/web/static/css/mobile.css
@@ -70,6 +70,10 @@ p {
   .create-file-btn {
     margin-top: 5px;
   }
+
+  .navbar-expand-lg .navbar-collapse {
+    text-align: right;
+  }
 }
 
 @media screen and (max-width:500px) {
