--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -22,8 +22,8 @@
               <span class="mdi mdi-menu icon-inline"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-              <a class="btn btn-secondary ml-2 float-right" href="/editor" aria-haspopup="false" aria-expanded="false">Config</a>
-              <a class="btn btn-secondary ml-2 float-right" href="/" aria-haspopup="false" aria-expanded="false">Status</a>
+              <a class="btn btn-secondary ml-2" href="/" aria-haspopup="false" aria-expanded="false">Status</a>
+              <a class="btn btn-secondary ml-2" href="/editor" aria-haspopup="false" aria-expanded="false">Config</a>
             </div>
           </nav>
         </div>
