--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -78,7 +78,7 @@ function load_status(){
 <div class="container">
   <p>The overall status of each host is listed below. Click the name to see additional details. If a management page is configured it can be launched with the <i class="mdi mdi-launch icon-sm icon-inline"></i> icon.</p>
   <table class="table table-striped" id="host_info">
-    <thead>
+    <thead class="thead-dark">
       <tr>
         <th>Host</th>
         <th>IP</th>
