added Flask-Markdown to render markdown test

--- a/web/templates/host_status.html
+++ b/web/templates/host_status.html
@@ -136,6 +136,7 @@ function silence_host(id, minutes){
       {% endif %}
     </div>
     <div class="tab-pane" id="documentation">
+      {{ docs | markdown }}
     </div>
   </div>
 </div>
