added CSS for the documentation markdown

--- a/web/templates/host_status.html
+++ b/web/templates/host_status.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block header %}
+<link rel="stylesheet" href="/static/css/documentation.css" />
 <script type="text/javascript">
 function check_now(id){
   //set the host next check time to now to force an update
