--- a/web/static/css/documentation.css
+++ b/web/static/css/documentation.css
@@ -5,7 +5,8 @@
 }
 
 #documentation h2 {
-  border-bottom: .05rem solid #e5e5e5;
+  border-bottom: .06rem solid #e5e5e5;
+  margin-top: .8em;
   margin-bottom: .8em;
 }
 
