can set if url should open in a new tab

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
               <a class="btn btn-secondary ml-2" href="/" aria-haspopup="false" aria-expanded="false">Status</a>
               {% for button in create_nav() %}
-              <a class="btn btn-secondary ml-2" href="{{ button.url }}">{{ button.name }}</a>
+              <a class="btn btn-secondary ml-2" href="{{ button.url }}" target="{{ '_blank' if button.new_tab else '_self'}}">{{ button.name }}</a>
               {% endfor %}
               <a class="btn btn-secondary ml-2" href="/editor" aria-haspopup="false" aria-expanded="false">Config</a>
             </div>
