--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -22,11 +22,11 @@
               <span class="mdi mdi-menu icon-inline"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-              <a class="btn btn-secondary ml-2" href="/" aria-haspopup="false" aria-expanded="false">Status</a>
+              <a class="btn btn-secondary ml-2" href="/" aria-haspopup="false" aria-expanded="false">Dashboard</a>
+              <a class="btn btn-secondary ml-2" href="/editor" aria-haspopup="false" aria-expanded="false">Config</a>
               {% for button in create_nav() %}
               <a class="btn btn-secondary ml-2" href="{{ button.url }}" target="{{ '_blank' if button.new_tab else '_self'}}">{{ button.name }}</a>
               {% endfor %}
-              <a class="btn btn-secondary ml-2" href="/editor" aria-haspopup="false" aria-expanded="false">Config</a>
             </div>
           </nav>
         </div>
