allow for setting nav style and colors

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -22,10 +22,10 @@
               <span class="mdi mdi-menu icon-inline"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-              <a class="btn btn-secondary ml-2" href="/" aria-haspopup="false" aria-expanded="false">Dashboard</a>
-              <a class="btn btn-secondary ml-2" href="/editor" aria-haspopup="false" aria-expanded="false">Config</a>
-              {% for button in create_nav() %}
-              <a class="btn btn-secondary ml-2" href="{{ button.url }}" target="{{ '_blank' if button.new_tab else '_self'}}">{{ button.name }}</a>
+              <a class="btn btn-{{ get_nav_style() }} ml-2" href="/" aria-haspopup="false" aria-expanded="false">Dashboard</a>
+              <a class="btn btn-{{ get_nav_style() }} ml-2" href="/editor" aria-haspopup="false" aria-expanded="false">Config</a>
+              {% for button in create_nav_links() %}
+              <a class="btn btn-{{ get_nav_style() }} ml-2" href="{{ button.url }}" target="{{ '_blank' if button.new_tab else '_self'}}">{{ button.name }}</a>
               {% endfor %}
             </div>
           </nav>
