added support for toc and tables in markdown added special endpoint to load current README as a guide

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -44,8 +44,12 @@
             {% block onload_scripts %}{% endblock %}
           });
         </script>
-        <footer class="footer mt-5">
-             <p align="center"><a href="https://github.com/robweber/trash-panda"><i class="mdi mdi-github icon-2x"></i></a></p>
+        <footer class="footer mt-5" align="center">
+           <p>
+             <a href="/guide" class="mr-3"><i class="mdi mdi-book-open-page-variant-outline icon-2x"></i></a>
+             <a href="https://github.com/robweber/trash-panda"><i class="mdi mdi-github icon-2x"></i></a>
+           </p>
+           <p>Version 4.2</p>
         </footer>
     </body>
 </html>
