hide title on mobile

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -20,7 +20,7 @@
         <div class="container">
         <div class="header">
           <nav class="navbar navbar-expand-lg">
-            <h3 class="navbar-brand text-muted"><img src="/static/favicon-50x50.png" class="mr-3"/><span class="text-danger">Trash Panda</span> - {{ page_title }}</h3>
+            <h3 class="navbar-brand text-muted"><img src="/static/favicon-50x50.png" class="mr-3"/><span class="tp-title"><span class="text-danger">Trash Panda</span> -</span> {{ page_title }}</h3>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
               <span class="mdi mdi-menu icon-inline"></span>
             </button>
