--- a/web/templates/services.html
+++ b/web/templates/services.html
@@ -3,7 +3,7 @@
 <script type="text/javascript">
 
 function load_status(){
-  $.ajax({type: 'GET', url: '/api/status/tag/{{ tag_id }}', success: function(data, status, request){
+  $.ajax({type: 'GET', url: '{{ url }}', success: function(data, status, request){
     table = $('#tag_info > tbody');
 
     // setup row objects
