attempt at making this display better on mobile

--- a/web/static/css/mobile.css
+++ b/web/static/css/mobile.css
@@ -94,6 +94,10 @@ p {
     font-size: .8em;
   }
 
+  .hide-sm {
+    display:none;
+  }
+
   .host_title span::before {
     content: "\A";
     white-space: pre;
