modified history.get_service, only need service_id here perf_id is now the entire service + perf id info added redis time series integration to save perf data info for 24 hours per host added chartjs to show perf data if available added link to charts on host staus page

--- a/web/templates/host_status.html
+++ b/web/templates/host_status.html
@@ -127,6 +127,9 @@ function silence_host(id, minutes){
             {% if(row['state'] == 'UNCONFIRMED') %}
             (check {{ row['check_attempt'] }}/{{ host['service_check_attempts'] }})
             {% endif %}
+            {% if 'perf_data' in row: %}
+            <a href="/perf_data/{{ row['id'] }}" class="mdi mdi-chart-areaspline-variant icon-sm icon-inline"></a>
+            {% endif %}
             {% if('service_url' in row) %}
             <a href="{{ row['service_url'] }}" target="_blank" class="mdi mdi-launch icon-sm icon-inline"></a>
             {% endif %}
