--- a/web/static/css/mobile.css
+++ b/web/static/css/mobile.css
@@ -70,6 +70,11 @@ p {
     text-align: left;
   }
 
+  .host_back_btn {
+    display: block;
+    width: 100%;
+  }
+
   .service_check_btn, .create-file-btn, .silence_btn, .nav-btn{
     margin-bottom:5px;
     display: block;
